ahora enruta desde edit

--- a/src/app/component/application/Usuario/routed/admin/usuario-plist-admin-routed/usuario-plist-admin-routed.component.html
+++ b/src/app/component/application/Usuario/routed/admin/usuario-plist-admin-routed/usuario-plist-admin-routed.component.html
@@ -33,7 +33,7 @@
           <td>{{usuario.tipousuario.tipo}}</td>
           <td>
             <!-- [routerLink]="['admin/usuario/new']" -->
-            <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2" [routerLink]="['admin/usuario/new']"></button>
+            <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2" [routerLink]="['/admin/usuario/new']"></button>
             <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning" ></button>
         </td>
         </tr>
