--- a/src/app/component/application/TipoUsuario/routed/admin/tipousuario-plist-admin-routed/tipousuario-plist-admin-routed.component.css
+++ b/src/app/component/application/TipoUsuario/routed/admin/tipousuario-plist-admin-routed/tipousuario-plist-admin-routed.component.css
@@ -1,4 +1,4 @@
-.container{
+div{
     width: 100vw;
     height: 70vh;
 
@@ -15,24 +15,24 @@
     color: #2743e3;
     text-align: center;
 }
-.tabla{
+p-table{
   margin: 0 auto;
   width: 50vw;
   /* border-collapse: collapse; */
 
 }
-.tabla td, .tabla th{
+td, th{
   border: 1px solid #ddd;
   padding: 8px;
 
 
 }
 
-.tabla tr:nth-child(even){background-color: #f2f2f2;}
+tr:nth-child(even){background-color: #f2f2f2;}
 
-.tabla tr:hover {background-color: #ddd;}
+tr:hover {background-color: #ddd;}
 
-.tabla th {
+ th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
