--- a/src/app/component/application/TipoUsuario/routed/admin/tipousuario-plist-admin-routed/tipousuario-plist-admin-routed.component.html
+++ b/src/app/component/application/TipoUsuario/routed/admin/tipousuario-plist-admin-routed/tipousuario-plist-admin-routed.component.html
@@ -21,10 +21,8 @@
 </div> -->
 
 <div class="ui-g">
-  <p-panel header="Administración de usuarios" [style]="{width: '90%'}">
-    <div class="justify-content-start" [style]="{width: '20%'}">
-      <p-button label="Añadir usuario" icon="pi pi-plus"></p-button>
-    </div>
+  <p-panel header="Tipos de usuario" [style]="{width: '90%'}">
+    
     <p-table [value]="pListContent">
       <ng-template pTemplate="header">
         <tr>
