--- a/src/app/component/application/Usuario/routed/admin/usuario-plist-admin-routed/usuario-plist-admin-routed.component.html
+++ b/src/app/component/application/Usuario/routed/admin/usuario-plist-admin-routed/usuario-plist-admin-routed.component.html
@@ -1,7 +1,7 @@
-<div class="ui-g">
+<div class="page-content" style="height: calc(100vh - 149px)">
   <p-panel header="Administración de usuarios" [style]="{width: '90%'}">
     <div class="justify-content-start" [style]="{width: '20%'}" (click)="showAddModal()">
-      <p-button label="Añadir usuario" icon="pi pi-plus"></p-button>
+      <p-button label="Añadir usuario" icon="pi pi-plus" class="p-button-success mr-2"></p-button>
       <!-- <p-button label="Editar" icon="pi pi-pencil" ></p-button>
   <p-button label="Borrar" icon="pi pi-trash" ></p-button>
   <p-button label="Detalles" icon="pi pi-info-circle" ></p-button>
@@ -10,42 +10,50 @@
   <p-button label="Paginar" icon="pi pi-external-link" ></p-button>
   <p-button label="Recargar" icon="pi pi-refresh" ></p-button> -->
     </div>
-    <p-table [value]="usuarios">
-      <ng-template pTemplate="header">
-        <tr>
-          <th>Id</th>
-          <th>Nombre</th>
-          <th>Apellidos</th>
-          <th>DNI</th>
-          <th>email</th>
-          <th>Login</th>
-          <th>Tipo de Usuario</th>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="body" let-usuario>
-        <tr>
-          <td>{{usuario.id}}</td>
-          <td>{{usuario.nombre}}</td>
-          <td>{{usuario.apellidos}}</td>
-          <td>{{usuario.dni}}</td>
-          <td>{{usuario.email}}</td>
-          <td>{{usuario.login}}</td>
-          <td>{{usuario.tipousuario.tipo}}</td>
-          <td>
-            <!-- [routerLink]="['admin/usuario/new']" -->
-            <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2"
-              [routerLink]="['/admin/usuario/new']"></button>
-            <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning"></button>
-          </td>
-        </tr>
-      </ng-template>
-    </p-table>
+
+    <div class="card">
+      <p-table [value]="usuarios" responsiveLayout="stack" [breakpoint]="'960px'" [tableStyle]="{'min-width': '50rem'}">
+
+        <ng-template pTemplate="header" let-columns>
+          <tr>
+            <th>Id</th>
+            <th>Nombre</th>
+            <th>Apellidos</th>
+            <th>DNI</th>
+            <th>email</th>
+            <th>Login</th>
+            <th>Tipo de Usuario</th>
+          </tr>
+        </ng-template>
+
+        <ng-template pTemplate="body" let-usuario let-columns="columns">
+          <tr>
+            <td>{{usuario.id}}</td>
+            <td>{{usuario.nombre}}</td>
+            <td>{{usuario.apellidos}}</td>
+            <td>{{usuario.dni}}</td>
+            <td>{{usuario.email}}</td>
+            <td>{{usuario.login}}</td>
+            <td>{{usuario.tipousuario.tipo}}</td>
+            <td>
+            <div>
+              <!-- [routerLink]="['/admin/usuario/new']" -->
+              <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2"
+                [routerLink]="['/admin/usuario/edit',usuario.id]"></button>
+              <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning">
+
+              </button>
+              <button pButton pRipple icon="pi pi-eye" class="p-button-rounded p-button-help mr-2"
+              [routerLink]="['/admin/usuario/view',usuario.id]"></button>
+            </div>
+            </td>
+          </tr>
+        </ng-template>
+      </p-table>
+    </div>
     <p-paginator [totalRecords]="totalElements" [rows]="5" [showCurrentPageReport]="true"
       [rowsPerPageOptions]="[5,10,15,20]" (onPageChange)="setPage($event)"></p-paginator>
   </p-panel>
 </div>
-<app-usuario-edit-admin-routed
-[displayAddModal]="displayAddModal"
-(clickClose)="hideAddModal($event)">
+<app-usuario-edit-admin-routed [displayAddModal]="displayAddModal" (clickClose)="hideAddModal($event)">
 </app-usuario-edit-admin-routed>
-
