--- a/src/app/component/application/Usuario/routed/admin/usuario-view-admin-routed/usuario-view-admin-routed.component.html
+++ b/src/app/component/application/Usuario/routed/admin/usuario-view-admin-routed/usuario-view-admin-routed.component.html
@@ -1,4 +1,4 @@
-<div class="container ">
+<!-- <div class="container ">
   <div class="row">
       <div class="col">
           <h1 class="titulo">Vista de un Usuario </h1>
@@ -36,7 +36,7 @@
           </table>
       </div>
   </div>
-</div>
+</div> -->
 
 <!-- <p-dialog [(visible)]="usuarios" [style]="{width: '450px'}" header="Product Details" [modal]="true" styleClass="p-fluid">
   <ng-template pTemplate="content">
@@ -85,4 +85,11 @@
 </p-dialog> -->
 
 
-
+<div class="container mt-5">
+  <div class="row">
+    <div class="col">
+      <h1 class="text-center mb-5">Vista de un Usuario con id={{id}}</h1>
+      <app-usuario-detail-admin-routed [id]="id"></app-usuario-detail-admin-routed>
+    </div>
+  </div>
+</div>
