--- a/src/app/component/application/Usuario/routed/admin/usuario-view-admin-routed/usuario-view-admin-routed.component.css
+++ b/src/app/component/application/Usuario/routed/admin/usuario-view-admin-routed/usuario-view-admin-routed.component.css
@@ -1,43 +1,5 @@
-.container{
-  width: 100vw;
-  height: 70vh;
-
-  padding: 1em;
-  margin: 1em;
-
-
-
-}
-
-.titulo {
-  font-size: 1.5em;
-  font-weight: bold;
-  color: #2743e3;
+h1
+{
   text-align: center;
+  color: blueviolet;
 }
-.tabla{
-margin: 0 auto;
-width: 50vw;
-
-
-}
-.tabla td, .tabla th{
-border: 1px solid #ddd;
-padding: 8px;
-
-
-}
-
-.tabla tr:nth-child(even){background-color: #f2f2f2;}
-
-.tabla tr:hover {background-color: #ddd;}
-
-th {
-width: 10vw;
-padding-top: 12px;
-padding-bottom: 12px;
-text-align: left;
-background-color: #2743e3;
-color: white;
-}
-
