--- a/src/app/component/application/Usuario/routed/admin/usuario-remove-admin-routed/usuario-remove-admin-routed.component.html
+++ b/src/app/component/application/Usuario/routed/admin/usuario-remove-admin-routed/usuario-remove-admin-routed.component.html
@@ -1,10 +1,17 @@
-<p>usuario-remove-admin-routed works!</p>
-<div class="container mt-5">
+<div class="layout-config">
+  <div class="layout-config-content-wrapper">
 
 
-  <h1>Vista de Usuario con id={{id}}</h1>
+    <h1 style="text-align: center;">Borrar Usuario con id = {{id}}</h1>
 
-  <app-usuario-detail-admin-routed [id]="id"></app-usuario-detail-admin-routed>
+    <app-usuario-detail-admin-routed [id]="id"></app-usuario-detail-admin-routed>
 
+    <div class="boton">
+      <p-confirmDialog header="Confirmacion" icon="pi pi-exclamation-triangle"
+        [breakpoints]="{'960px': '75vw', '640px': '100vw'}" [style]="{width: '50vw'}"></p-confirmDialog>
+      <button (click)="confirm()" pButton icon="pi pi-check" label="Confirmar"
+        [ngStyle]="{backgroundColor:'var(--blue-400)'}"></button>
+
+    </div>
+  </div>
 </div>
-
