boton nuevo con ventana hecho

--- a/src/app/component/application/Usuario/routed/admin/usuario-edit-admin-routed/usuario-edit-admin-routed.component.html
+++ b/src/app/component/application/Usuario/routed/admin/usuario-edit-admin-routed/usuario-edit-admin-routed.component.html
@@ -22,7 +22,7 @@ header="Añadir usuario"
   </div>
   <div class="p-col-12 p-md-6 p-lg-4">
     <span>DNI</span>
-    <!-- <p-inputMask  characterPattern="[0-9]{8}[A-Z]"></p-inputMask> -->
+    <p-inputMask  characterPattern="[0-9]{8}[A-Z]"></p-inputMask>
 </div>
 </form>
 
