--- a/src/app/component/application/Usuario/routed/admin/usuario-plist-admin-routed/usuario-plist-admin-routed.component.html
+++ b/src/app/component/application/Usuario/routed/admin/usuario-plist-admin-routed/usuario-plist-admin-routed.component.html
@@ -1,7 +1,21 @@
 <div class="page-content" style="height: calc(100vh - 149px)">
   <p-panel header="Administración de usuarios" [style]="{width: '90%'}">
-    <div class="justify-content-start" [style]="{width: '20%'}" (click)="showAddModal()">
-      <p-button label="Añadir usuario" icon="pi pi-plus" class="p-button-success mr-2"></p-button>
+  <p-panel>
+    <p-button (click)="showBasicDialog()" icon="pi pi-plus" label="Nuevo"
+    [style]="{width: '7vw'}"></p-button>
+    <p-dialog header="Header" [(visible)]="displayBasic" [style]="{width: '40vw'}" [maximizable]="true" [breakpoints]="{'960px': '75vw'}">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+           
+        <ng-template pTemplate="footer">
+            <p-button icon="pi pi-check" (click)="displayBasic=false" label="Guardar" styleClass="p-button-text"></p-button>
+        </ng-template>
+    </p-dialog>
+</p-panel>
+    <!-- <div class="justify-content-start" [style]="{width: '10%'}" (click)="showAddModal()">
+      <p-button label="Añadir usuario" icon="pi pi-plus" class="p-button-success mr-2"></p-button> -->
       <!-- <p-button label="Editar" icon="pi pi-pencil" ></p-button>
   <p-button label="Borrar" icon="pi pi-trash" ></p-button>
   <p-button label="Detalles" icon="pi pi-info-circle" ></p-button>
@@ -9,7 +23,7 @@
   <p-button label="Ordenar" icon="pi pi-sort" ></p-button>
   <p-button label="Paginar" icon="pi pi-external-link" ></p-button>
   <p-button label="Recargar" icon="pi pi-refresh" ></p-button> -->
-    </div>
+    <!-- </div> -->
 
     <div class="card">
       <p-table [value]="usuarios" responsiveLayout="stack" [breakpoint]="'960px'" [tableStyle]="{'min-width': '50rem'}">
@@ -38,11 +52,10 @@
             <td>
               <div>
                 <!-- [routerLink]="['/admin/usuario/new']" -->
-                <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2"
-                  ></button>
+                <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2">
+                </button>
                 <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning"
                   [routerLink]="['/admin','usuario','remove',usuario.id]">
-
                 </button>
                 <button pButton pRipple icon="pi pi-eye" class="p-button-rounded p-button-help mr-2"
                   [routerLink]="['/admin/usuario/view',usuario.id]"></button>
@@ -56,5 +69,3 @@
       [rowsPerPageOptions]="[5,10,15,20]" (onPageChange)="setPage($event)"></p-paginator>
   </p-panel>
 </div>
-<!-- <app-usuario-edit-admin-routed [displayAddModal]="displayAddModal" (clickClose)="hideAddModal($event)">
-</app-usuario-edit-admin-routed> -->
