hecho modal y comunicado con new

--- a/src/app/component/application/Usuario/routed/admin/usuario-new-admin-routed/usuario-new-admin-routed.component.html
+++ b/src/app/component/application/Usuario/routed/admin/usuario-new-admin-routed/usuario-new-admin-routed.component.html
@@ -1,4 +1,4 @@
-<p-dialog [(visible)]="usuarioDialog" [style]="{width: '450px'}" header="Usuario" [modal]="true" styleClass="p-fluid">
+<!-- <p-dialog [(visible)]="usuarioDialog" [style]="{width: '450px'}" header="Usuario" [modal]="true" styleClass="p-fluid">
   <ng-template pTemplate="content">
 
     <div class="field">
@@ -44,7 +44,7 @@
     </div>
 
 
-    <!-- <div class="field">
+     <div class="field">
       <label for="inventoryStatus">Inventory Status</label>
       <p-dropdown [(ngModel)]="product.inventoryStatus" inputId="inventoryStatus" [options]="statuses"
         placeholder="Select">
@@ -89,7 +89,7 @@
         <p-inputNumber id="quantity" [(ngModel)]="product.quantity"></p-inputNumber>
       </div>
     </div> -->
-  </ng-template>
+  <!-- </ng-template>
 
   <ng-template pTemplate="footer">
     <button pButton pRipple label="Cancel" icon="pi pi-times" class="p-button-text" (click)="hideDialog()"></button>
@@ -97,4 +97,29 @@
   </ng-template>
 </p-dialog>
 
-<p-confirmDialog [style]="{width: '450px'}"></p-confirmDialog>
+<p-confirmDialog [style]="{width: '450px'}"></p-confirmDialog> -->
+<p-dialog
+header="Header"
+[(visible)]="displayBasic"
+[style]="{width: '40vw'}"
+[maximizable]="true"
+[breakpoints]="{'960px': '75vw'}"
+(onHide)="closeModal()">
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+    <app-usuario-form-admin-unrouted></app-usuario-form-admin-unrouted>
+  </p>
+
+
+  <ng-template pTemplate="footer">
+      <p-button
+      icon="pi pi-check"
+      (click)="closeModal()"
+      label="Cancelar"
+      styleClass="p-button-text">
+    </p-button>
+  </ng-template>
+</p-dialog>
