--- a/src/app/component/application/Usuario/routed/admin/usuario-new-admin-routed/usuario-new-admin-routed.component.html
+++ b/src/app/component/application/Usuario/routed/admin/usuario-new-admin-routed/usuario-new-admin-routed.component.html
@@ -99,27 +99,29 @@
 
 <p-confirmDialog [style]="{width: '450px'}"></p-confirmDialog> -->
 <p-dialog
-header="Header"
+header="Crear Usuario"
 [(visible)]="displayBasic"
 [style]="{width: '40vw'}"
 [maximizable]="true"
 [breakpoints]="{'960px': '75vw'}"
 (onHide)="closeModal()">
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-    <app-usuario-form-admin-unrouted></app-usuario-form-admin-unrouted>
-  </p>
+    <div>
+      <app-usuario-form-admin-unrouted></app-usuario-form-admin-unrouted>
 
-
-  <ng-template pTemplate="footer">
+    </div>
+    <ng-template pTemplate="footer">
       <p-button
       icon="pi pi-check"
       (click)="closeModal()"
       label="Cancelar"
       styleClass="p-button-text">
     </p-button>
+    <p-button
+        (click)="onSubmit()"
+        label="Añadir"
+        [disabled]="oForm.invalid"
+      ></p-button>
   </ng-template>
+
 </p-dialog>
